--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "bootswatch": "^4.1.3",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
